syntax = "proto3";

option go_package = "github.com/solo-io/solo-projects/projects/gloo/pkg/plugins/jwt";

package envoy.config.filter.http.solo_jwt_authn.v2;

option java_package = "io.envoyproxy.envoy.config.filter.http.solo_jwt_authn.v2";
option java_outer_classname = "SoloJwtAuthnProto";
option java_multiple_files = true;
import "validate/validate.proto";

message SoloJwtAuthnPerRoute { string requirement = 1; }
